web/sources/tests/address_payable_type_expression.sol
contract C {
    function f() public pure {
        address payable z;
    }
}
// ----
// ParserError 2314: (67-68): Expected identifier but got ';'
